# wot-td-embedded

./: Cargo.toml  README.md
.github/workflows/: test.yaml
examples/: example.rs
src/: constants.rs  lib.rs  serialization.rs
src/data_structures/: array.rs  map.rs  mod.rs
src/models/: action.rs  additional_expected_response.rs  common.rs  data_schema.rs  event.rs  expected_response.rs  form.rs  interaction_affordances.rs  link.rs  mod.rs  property.rs  security_definition.rs  thing_description.rs  version_info.rs
src/models/data_schema/: array_schema.rs  integer_schema.rs  mod.rs  number_schema.rs  object_schema.rs  string_schema.rs
src/models/security_definition/: ace.rs  api_key.rs  basic.rs  bearer.rs  combo.rs  digest.rs  mod.rs  oauth2.rs  psk.rs
