[package]
name = "wot-td-embedded"
description = "Creates and serializes WoT Thing Descriptions on embedded devices."
version = "0.1.0"
edition = "2021"
authors = ["Jan Romann <jan.romann@uni-bremen.de>"]
license = "MIT OR Apache-2.0"
keywords = ["web-of-things", "webofthings", "wot", "iot", "embedded", "no_std"]

[dependencies]
itoa = "1.0.3"
ryu = { version = "1.0.11", default-features = false, features = ["small"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_derive = "1.0.144"
serde_with = { version = "2.0.0", default-features = false, features = ["macros"] }

[dev-dependencies]
serde-json-core = "0.4.0"
