[package]
name = "wot-td-embedded"
description = "Creates and serializes WoT Thing Descriptions on embedded devices."
version = "0.1.0"
edition = "2021"
authors = ["Jan Romann <jan.romann@uni-bremen.de>"]
license = "MIT OR Apache-2.0"
keywords = ["web-of-things", "webofthings", "wot", "iot", "embedded", "no_std"]

[dependencies]
hashbrown = { version = "0.12.3", default-features = false, features = ["ahash", "inline-more", "serde"] }
serde = { version = "1.0.87", default-features = false, features = ["derive", "alloc"] }
serde_derive = "1.0.144"
serde_with = { version = "2.0.0", default-features = false, features = ["macros"] }

[dev-dependencies]
serde-json-core = "0.4.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = "s"
